fix alignment and footer

--- a/src/components/SubComponents/AboutMyWork.module.css
+++ b/src/components/SubComponents/AboutMyWork.module.css
@@ -1,10 +1,9 @@
 .arrowdownQAtitle{
     font-size: 40px;
-    padding-top: 20px; 
     height: 50px;
     color: var(--primary);
     display: block;
-    text-align: right !important;
+    text-align: right;
 }
 
 .QAcontent{
@@ -12,6 +11,7 @@
     margin-top: 2rem;
     padding-top: 5px;
     cursor: pointer;
+    padding-left: 20px;
 }
 
 
@@ -48,3 +48,14 @@
 .projectbody p{
     color: white;
 }
+
+/* Mobile Responsive */
+
+
+
+@media only screen and (max-width: 767px) {
+    .QAcontent{
+        text-align: center;
+        padding-left: 0;
+    }
+  }
