--- a/src/components/SubComponents/FeatureProjects.module.css
+++ b/src/components/SubComponents/FeatureProjects.module.css
@@ -1,42 +1,31 @@
-.featureprojects{
-    border-right: 2px solid black;
- }
- 
- 
- .project2{
-     margin-left: 1rem;
- }
- .mobilecard{
-    max-width: 20rem !important;
+.featureprojects {
+  border-right: 2px solid black;
 }
- 
- @media only screen and (max-width: 767px) {
-     .project2{
-         margin-top: 1rem;
-         margin-left: 0px;
-     }
- 
-     .featureprojects{
-         border-right: none !important;
-      }
- }
- 
- 
- .txt-type{
-     display: inline-block;
-     width: 285px;
-     text-align: left;
-     padding-left: 10px;
- }
- 
- @media only screen and (max-width: 600px) {
-     .txt-type{
-         width: 180px;
-         text-align: center;
-     }
- }
- .wrapper-writer{
-     display: inline-block;
-     width: 20px
-     
- }
+
+.project2 {
+  margin-left: 1rem;
+}
+
+.mobilecard {
+  max-width: 20rem !important;
+}
+
+
+.wrapper-writer {
+  display: inline-block;
+  width: 20px;
+}
+
+/* Mobile */
+
+@media only screen and (max-width: 767px) {
+  .project2 {
+    margin-top: 1rem;
+    margin-left: 0px;
+  }
+
+  .featureprojects {
+    border-right: none !important;
+  }
+}
+
